[package]
name = "critter"
publish = false
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
edition = "2021"

[[bench]]
name = "sled"
harness = false

[dependencies]
criterion = "0.3.0"
vsdbsled = { path = "../.." }
jemallocator = "0.3.2"

[features]
compression=["vsdbsled/compression"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.bench]
lto = "thin"
opt-level = 3
codegen-units = 1
