[package]
name = "stress2"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
publish = false
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = "fat"
debug = true

[features]
default = []
lock_free_delays = ["vsdbsled/lock_free_delays"]
io_uring = ["vsdbsled/io_uring"]
event_log = ["vsdbsled/event_log"]
compression = ["vsdbsled/compression"]
no_logs = ["vsdbsled/no_logs"]
no_metrics = ["vsdbsled/no_metrics"]
measure_allocs = ["vsdbsled/measure_allocs"]
jemalloc = ["jemallocator"]
logging = ["env_logger", "log", "color-backtrace"]

[dependencies]
rand = "0.7.3"
env_logger = { version = "0.7.1", optional = true }
log = { version = "0.4.8", optional = true }
color-backtrace = { version = "0.3.0", optional = true }
jemallocator = { version = "0.3.2", optional = true }

[dependencies.vsdbsled]
default_features = false
path = "../.."
